--- a/requirements.txt
+++ b/requirements.txt
@@ -19,4 +19,5 @@ weasyprint~=65.0
 openai~=1.78.1
 azure-storage-blob~=12.25.1
 
-azure-ai-projects~=1.0.0b10
+azure-ai-projects~=1.0.0b12
+azure-ai-agents~=1.1.0b3
